--- a/sdk/pom.xml
+++ b/sdk/pom.xml
@@ -6,7 +6,7 @@
     <groupId>com.aliyun.kms</groupId>
     <artifactId>kms-transfer-client</artifactId>
     <packaging>jar</packaging>
-    <version>0.2.0</version>
+    <version>0.2.1</version>
     <name>kms-transfer-client</name>
     <url>http://www.aliyun.com</url>
     <description>Alibabacloud KMS Transfer Client for Java
@@ -30,7 +30,7 @@
         <dependency>
             <groupId>com.aliyun</groupId>
             <artifactId>alibabacloud-dkms-gcs-sdk</artifactId>
-            <version>0.4.0</version>
+            <version>0.5.1</version>
         </dependency>
         <dependency>
             <groupId>com.aliyun</groupId>
@@ -54,9 +54,8 @@
 
     <licenses>
         <license>
-            <name/>
-            <url/>
-            <distribution/>
+            <name>The Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
         </license>
     </licenses>
     <scm>
